--- a/.github/workflows/linkedservice.yml
+++ b/.github/workflows/linkedservice.yml
@@ -17,7 +17,16 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install jq
-      run: sudo apt-get install jq
+      run: |
+        sudo apt-get install jq
+
+    - name: Print Environment
+      run: |
+        echo ${{ inputs.environment }}
+        echo ${{ secrets.AZURE_CLIENT_ID }}
+        echo ${{ secrets.AZURE_CLIENT_SECRET }}
+        echo ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        echo ${{ secrets.AZURE_TENANT_ID }}
 
     - name: Log in to Azure
       uses: azure/login@v2
