--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,12 +50,17 @@ jobs:
             --resource-group komatsu-poc \
             --template-file main.bicep \
             --parameters adfName=test-kx-poc
-
+            
   test:
     needs: deploy-adf
     uses: ./.github/workflows/linkedservice.yml
     with: 
       environment: ${{ github.event.inputs.environment }}
+    secrets:
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
       # - name: Extract Pipeline Order from JSON
       #   id: get_pipeline_order
