--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -3,8 +3,11 @@ name: Versioning and Tagging
 on:
   push:
     branches:
-      - dev
-    # This workflow will run for any push to dev, test, or main branches.
+      -  main
+      #- main
+      #- 'dev-*'
+      #- 'test-*'
+    # This workflow will run for any push to dev, test, or main branches
 permissions:
   contents: write
 
@@ -31,10 +34,10 @@ jobs:
           NEW_VERSION="v$MAJOR.$MINOR.$PATCH"  
           echo "New version: $NEW_VERSION"
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-
+      
       - name: Create and push new version tag
         run: |
-          git config --global user.email "souvikg90@gmail.com"
-          git config --global user.name "souvikg90"
+          git config --global user.email "emailid@global.komatsu"
+          git config --global user.name "username"
           git tag -a $NEW_VERSION -m "Release version $NEW_VERSION"
           git push origin $NEW_VERSION
