--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - name: Check dependencies.json contents
         run: |
-            cat dependencies.json  # Check the contents of the JSON file
+            cat ../pipeline_dependency/dependencies.json
 
       - name: Extract Pipeline Order from JSON
         id: get_pipeline_order
