--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,20 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
 
-      - name: Check dependencies.json contents
-        run: |
-            cat ./dependencies.json
+      - name: Install jq
+        run: sudo apt-get install jq
+
+      - name: Log in to Azure
+        uses: azure/login@v2
+        with:
+          creds: >
+                {
+                  "clientId":"${{ secrets.AZURE_CLIENT_ID }}",
+                  "clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}",
+                  "subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+                  "tenantId":"${{ secrets.AZURE_TENANT_ID }}"
+                }
+          enable-AzPSSession: true
 
       - name: Extract Pipeline Order from JSON
         id: get_pipeline_order
