--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,17 +49,17 @@ jobs:
             --template-file main.bicep \
             --parameters adfName=test-kx-poc
 
-  # test:
-  #   needs: deploy-adf
-  #   uses: ./.github/workflows/linkedservice.yml
-  #   with: 
-  #     environment: ${{ github.event.inputs.environment }}
-  #     TESTEV: ${{ github.env.ENV_VAR }}
-  #   secrets:
-  #     AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  #     AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-  #     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  #     AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  test:
+    needs: deploy-adf
+    uses: ./.github/workflows/linkedservice.yml
+    with: 
+      environment: ${{ github.event.inputs.environment }}
+      TESTEV: ${{ github.env.ENV_VAR }}
+    secrets:
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
   deploy: 
     runs-on: ubuntu-latest
