--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,19 +32,19 @@ jobs:
 
     
 
-  test:
-    needs: deploy-adf
-    uses: ./.github/workflows/linkedservice.yml
-    with: 
-      environment: ${{ github.event.inputs.environment }}
-    secrets:
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  # test:
+  #   needs: deploy-adf
+  #   uses: ./.github/workflows/linkedservice.yml
+  #   with: 
+  #     environment: ${{ github.event.inputs.environment }}
+  #   secrets:
+  #     AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  #     AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+  #     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  #     AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
   test2:
-    needs: test
+    needs: deploy-adf
     uses: ./.github/workflows/storageTable.yaml
     with: 
       environment: ${{ github.event.inputs.environment }}
